[workspace]
resolver = "3"

members = [
  "arg5",
  "dgmod",
  "b2c",
  "cargo-norm",
  "csv2json",
  "days",
  "delay",
  "fix-quotes",
  "grit",
  "head1",
  "hexify",
  "hexwords",
  "kcal",
  "leap",
  "lev",
  "md-front",
  "module-from-path",
  "netmask",
  "pangram",
  "perpetuity",
  "primes", "rot13",
  "save-context",
  "snitty",
  "stop-once",
  "sum-of-products",
  "trim-end",
  "tmux-send",
  "utf",
  "uuid",
  "vimod",
  "wl2md",
]

[workspace.lints.clippy]
pedantic = "deny"
