[package]
name = "dgmod"
version = "0.1.0"
edition = "2021"
description = "Analyze Rust module dependencies and generate Mermaid diagrams"
license = "MIT"

[dependencies]
# syn: Required for parsing Rust syntax. No stdlib alternative exists for
# parsing the full Rust grammar. Industry standard for Rust tooling.
syn = { version = "2.0", features = ["full", "extra-traits"] }

# clap: Required for CLI argument parsing. Could use manual parsing, but
# clap is well-maintained and provides a minimal, ergonomic API.
clap = { version = "4", features = ["derive"] }

# cargo_metadata: Required for workspace member detection (FR-015).
# Reading Cargo.toml manually is error-prone for complex workspace configs.
cargo_metadata = "0.18"

[lints]
workspace = true
