[package]
name = "gh-prs"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[lints]
workspace = true
