[package]
name = "task-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.29", features = ["signal"] }
rmcp = { version = "0.12", features = ["server", "transport-io"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "io-util"] }

[lints]
workspace = true
